# agui

./: .clippy.toml  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  QWEN.md  rustfmt.toml
.beads/: issues.jsonl
.doca/: .gitignore  config.yaml
crates/agui-desktop/: Cargo.toml  README.md
crates/agui-desktop/benches/: stream_timeline_bench.rs
crates/agui-desktop/src/: app.rs  config.rs  hot_reload.rs  layout.rs  lib.rs  logging.rs  main.rs  metrics.rs  mock_server.rs  protocol.rs  renderer.rs
crates/agui-desktop/src/renderer/: form_state.rs  schema.rs
crates/agui-desktop/src/renderer/components/: button.rs  container.rs  data.rs  form.rs  input.rs  layout.rs  mod.rs  text.rs
crates/agui-desktop/src/resilience/: components.rs  mod.rs  state.rs
crates/agui-desktop/src/stage/: cache.rs  diff.rs  mod.rs  state.rs  syntax.rs  types.rs
crates/agui-desktop/src/stage/components/: artifact_view.rs  diff_view.rs  mod.rs  tabs.rs  text_view.rs
crates/agui-desktop/src/stream/: mod.rs  state.rs  types.rs  virtual_list.rs
crates/agui-desktop/src/stream/components/: agent_bubble.rs  approval_gate.rs  mod.rs  plan_checklist.rs  reasoning_accordion.rs  status_update.rs  stream_item.rs  stream_timeline.rs  tool_call_card.rs  user_bubble.rs
crates/agui-desktop/src/tools/: file_ops.rs  mod.rs  schema.rs  shell.rs
crates/agui-desktop/tests/: integration_tests.rs
docs/architecture/: implementation_plan.md  stage-module-architecture.md  uag_foundation_v1.md  uag_rust_v1.1.md
docs/design/: agui-gpui-goals.md
docs/guides/: agui_-deployment-_-packaging-strategy.md  agui_-desktop-scaffold-implementation.md  agui_-performance-_-resilience-patterns.md
docs/reference/: ag-ui-websocket-protocol-specification.md  agui-resilience-module-implementation.md
docs/renderer/: agui-declarative-ui-renderer-implementation.md
