[workspace]
members = ["crates/agui-desktop"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AGUI Contributors"]
license = "MIT"

[workspace.dependencies]
# GUI - Using gpui (Zed's GPU-accelerated UI framework)
gpui = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.23"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Lazy initialization
once_cell = "1.19"

# Hot reload
notify = "6.1"

# Time and ID generation
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP server for mock
axum = { version = "0.7", features = ["ws"] }
hyper = "1.0"
futures = "0.3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
