[package]
name = "agui-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gpui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
futures = { workspace = true }

[[bin]]
name = "agui"
path = "src/main.rs"

[lib]
name = "agui_desktop"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "stream_timeline_bench"
harness = false
